--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -47,13 +47,35 @@ color: white;
 }
 
 .main_body {
-  background-color: rgb(255, 255, 255);
+  background: #cfc5a2;
+  border-bottom: 1px solid #e4e0cc;
+  border-top: 2px solid #eae7d6;
   box-sizing: border-box;
   padding-left: 10px;
   padding-right: 10px;
-  padding-top: 2px;
-  margin-left: 12%;
-  margin-right: 12%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 20px;
+  border-radius: 10px;
+  
+}
+
+.card-container {
+  background: #cfc5a2;
+  width: 125px;
+  height: 250px;
+  margin-top: 20px;
+  padding: 5px;
+ 
+}
+
+.card-action {
+  display: flex;
+  justify-content: center;
+  padding: 2px;
   margin-top: 5px;
-  border-radius: 5px;
+  margin-bottom: 5px;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 10px;
 }
